--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7b7577">  <td>17/01/07 23:13:50</td>   <td>0</td> <td title="&gt;&gt;BaseTest.preCondition()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">&gt;&gt;preCondition</td> 
+<tr bgcolor="7b7577">  <td>17/01/08 18:59:14</td>   <td>0</td> <td title="&gt;&gt;BaseTest.preCondition()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">&gt;&gt;preCondition</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@321142942</td>   <td></td> </tr>
-<tr bgcolor="afb29c">  <td>17/01/07 23:13:58</td>   <td>7988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">loginTest</td> 
+<tr bgcolor="afb29c">  <td>17/01/08 18:59:24</td>   <td>9444</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.searchFlight()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">searchFlight</td> 
   <td>main@321142942</td>   <td></td> </tr>
-<tr bgcolor="afb29c">  <td>17/01/07 23:14:11</td>   <td>20775</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.searchFlight()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">searchFlight</td> 
+<tr bgcolor="afb29c">  <td>17/01/08 18:59:41</td>   <td>27099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.bookFlight()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">bookFlight</td> 
   <td>main@321142942</td>   <td></td> </tr>
-<tr bgcolor="7b7577">  <td>17/01/07 23:14:20</td>   <td>29516</td> <td title="&lt;&lt;BaseTest.postCondition()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">&lt;&lt;postCondition</td> 
+<tr bgcolor="afb29c">  <td>17/01/08 18:59:45</td>   <td>30480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.travellersDetail()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">travellersDetail</td> 
+  <td>main@321142942</td>   <td></td> </tr>
+<tr bgcolor="afb29c">  <td>17/01/08 19:00:15</td>   <td>60547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.paymentDetails()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">paymentDetails</td> 
+  <td>main@321142942</td>   <td></td> </tr>
+<tr bgcolor="7b7577">  <td>17/01/08 19:00:45</td>   <td>90688</td> <td title="&lt;&lt;BaseTest.postCondition()[pri:0, instance:com.gojek.sanity.LoginTest@b684286]">&lt;&lt;postCondition</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@321142942</td>   <td></td> </tr>
 </table>
